<resources>
    <string name="app_name">高仿汽车报价助手</string>
    <string name="select_models">选择车型</string>
    <string name="independent_car">自主选车</string>
    <string name="price_reduction_zone">降价专区</string>
    <string name="my_garage">我的车库</string>
    <string name="free_test_drive">免费试驾</string>
    <string name="group_to_buy">组团买车</string>
    <string name="consult_floor_price">咨询底价</string>
    <string-array name="citys">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>重庆</item>
        <item>天津</item>
        <item>涪陵</item>
    </string-array>
    <string name="spiiner_title">请选择您所在的城市</string>
    <!--岩-->
    <string name="choose_city">北京</string>
    <string name="car_types">全部车型</string>
    <string name="city_search_default_hint">搜索城市</string>
    <string name="car_price_biggest">降幅最大</string>
    <string name="car_price_new_public">最新发布</string>
    <string name="car_price_expensive">价格最高</string>
    <string name="car_price_cheapest">价格最低</string>
    <string name="quotes_reduce_price">降价专区</string>
    <string name="loading_wait">正在载入，请稍候...</string>
    <string name="choose_city_title">选择城市</string>

</resources>
