<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qinshou.administrator.carsofferassistant.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:titleTextColor="#FFFFFF">

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/content_fm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#f1f1f1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/select_models_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/select_models_bt"
            android:gravity="center_horizontal"
            android:onClick="chooseFragment"
            android:text="@string/select_models"
            android:textColor="@color/car_type_words_selector" />

        <TextView
            android:id="@+id/independent_car_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/independent_car_bt"
            android:gravity="center_horizontal"
            android:onClick="chooseFragment"
            android:text="@string/independent_car"
            android:textColor="@color/car_type_words_selector" />

        <TextView
            android:id="@+id/price_reduction_zone_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/price_reduction_bt"
            android:gravity="center_horizontal"
            android:onClick="chooseFragment"
            android:text="@string/price_reduction_zone"
            android:textColor="@color/car_type_words_selector" />

        <TextView
            android:id="@+id/my_garage_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/my_garage_bt"
            android:gravity="center_horizontal"
            android:onClick="chooseFragment"
            android:text="@string/my_garage"
            android:textColor="@color/car_type_words_selector" />

    </LinearLayout>
</LinearLayout>
