<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- 图片、车名、降价信息等 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 显示车的图片 -->
        <ImageView
            android:id="@+id/iv_car_pic_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/default_icon_loading" />
        <!-- 右侧布局文件，展示所有文字信息 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 显示车型、车款、生产年份 -->
            <TextView
                android:id="@+id/tv_cardetalinfo_item_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="奥迪A3 Sportback 35TFSIM 进取型 2016款"
                android:textColor="#2F2F2F" />
            <!-- 展示价格 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- 促销价 -->
                <TextView
                    android:id="@+id/tvpromotePrice_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15.99万"
                    android:textColor="#FF0000" />

                <!-- 原价 -->
                <TextView
                    android:id="@+id/tv_vendorPrice_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="18.49万"
                    android:textColor="#A4A4A4" />
                <!-- 降价 -->
                <TextView
                    android:id="@+id/tv_reduce_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/down_price"
                    android:text="2.5万"
                    android:textColor="#FF0000" />

            </LinearLayout>


            <!-- 销售地点 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- 销售方式和销售地点 -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="4s店 阜阳奥迪汽车"
                    android:textColor="#C2C2C2" />
                <!-- 销售范围 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="售本省"
                    android:textColor="#C2C2C2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 下面的一排按钮：免费试驾、组团买车、咨询底价 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 免费试车 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="operate"
            android:text="@string/free_test_drive"
            android:textColor="#68B0FB" />

        <!-- 组团购车 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="operate"
            android:text="@string/group_to_buy"
            android:textColor="#68B0FB" />

        <!-- 咨询底价 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="operate"
            android:text="@string/consult_floor_price"
            android:textColor="#68B0FB" />

    </LinearLayout>

</LinearLayout>
